# operating-systems

./: .gitignore  CMakeLists.txt  OperatingSystems.sln  machinegen.py
convert/: ArgsParser.cpp  ArgsParser.h  CMakeLists.txt  Constants.h  ConversionMode.h  MealyMachineTable.cpp  MealyMachineTable.h  MooreMachineTable.cpp  MooreMachineTable.h  convert.vcxproj  convert.vcxproj.filters  main.cpp  output.csv  pch.h
determine/: CMakeLists.txt  Logger.hpp  MachineCsvReader.cpp  MachineCsvReader.h  MachineDeterminer.cpp  determine.vcxproj  determine.vcxproj.filters  main.cpp  nondeterministic_fsm.txt  nondeterministic_with_empty_signals.txt
determine/determine_tests/: determine.test.cpp  determine_tests.vcxproj  determine_tests.vcxproj.filters  test.cpp
determine/fsm/: State.cpp  State.h  io.cpp  io.h
determine/util/string/: string.hpp
grammar/: CMakeLists.txt  GrammarReader.cpp  GrammarReader.h  Logger.hpp  Machine.cpp  Machine.h  MachineDeterminer.cpp  MachineDeterminer.h  State.cpp  State.h  Transition.h  grammar.vcxproj  grammar.vcxproj.filters  main.cpp  right_grammar.txt
grammar/fsm/: Machine.cpp  Machine.h  State.cpp  State.h  io.cpp  io.h
grammar/grammar_tests/: grammar.test.cpp  grammar_tests.vcxproj  grammar_tests.vcxproj.filters
lexer/: KeywordToken.hpp  Lexer.cpp  Lexer.h  NumberParser.cpp  NumberParser.h  OneSymbolToken.hpp  Token.h  TokenLogger.cpp  TokenLogger.h  TokenWithContext.h  TwoSymbolToken.hpp  lexer.vcxproj  lexer.vcxproj.filters  main.cpp
lexer/lexer_tests/: Lexer.test.cpp  lexer_tests.vcxproj  lexer_tests.vcxproj.filters
minimize/: AbstractState.cpp  AbstractState.h  AbstractState.hpp  AbstractTransition.hpp  CMakeLists.txt  CommonMachineAlgorithm.hpp  Constants.h  Label.h  Logger.hpp  MachineMinimizer.hpp  MealyMachine.cpp  MealyMachine.h  MealyState.cpp  MealyState.h  MealyTransition.cpp  MealyTransition.h  MooreMachine.cpp  MooreMachine.h  MooreState.cpp  MooreState.h  MooreTransition.cpp  MooreTransition.h  ProgramArguments.cpp  ProgramArguments.h  common.h  main.cpp  minimize.vcxproj  minimize.vcxproj.filters
minimize/test_data/: mealy.csv  mealy3.csv  moore.csv
